@@ -1,1 +1,1 @@
-#define VERSION	"Fourth Edition (20110526)"
+#define VERSION	"Fourth Edition (20110619)"
